# Juego-Seguridad-IoT

./: README.md  pyproject.toml
src/game/: __init__.py  main.py
src/game/class/: dispositivo.py  sensor_movimiento.py  sensor_temperatura.py
src/game/classes/: __init__.py  dispositivo.py  sensor_movimiento.py
src/game/core/: __init__.py  alert.py  device.py  iot_game.py
src/game/utils/enums/: camara.py  estado_dispositivo.py  tipo_dispositivo.py  unidad_temperatura.py
tests/: test_game.py
