[tool.poetry]
name = "iot-security-game"
version = "0.1.0"
description = "A game to manage IoT security alerts."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"